feat: Support nonzero shard/realm in fee and schedule commands (#19279)
Signed-off-by: Matt Hess <matt.hess@swirldslabs.com>